## This is a automake file, part of Unidata's netCDF package.
# Copyright 2007, see the COPYRIGHT file for more information.

# This is to include the libnc-dap test comparison files

# $Id: Makefile.am,v 1.5 2009/03/01 00:14:08 dmh Exp $

EXTRA_DIST=synth1.dmp synth2.dmp synth3.dmp synth4.dmp synth5.dmp synth6.dmp \
1990-S1700101.HDF.WVC_Lat.dmp 1998-6-avhrr.dat.dmp \
b31a.dmp b31.dmp D1.dmp Drifters.dmp \
EOSDB.dmp ingrid.dmp nestedDAS.dmp \
NestedSeq2.dmp NestedSeq.dmp \
OverideExample.dmp pbug0001b.dmp SimpleDrdsExample.dmp \
test.01.dmp test.02.dmp test.03.dmp test.04.dmp \
test.05.dmp test.06a.dmp test.06.dmp test.07a.dmp \
test.07.dmp test.21.dmp test.22.dmp test.23.dmp \
test.31.dmp test.32.dmp test.50.dmp \
test.53.dmp test.55.dmp test.56.dmp test.57.dmp \
test.66.dmp test.67.dmp test.68.dmp test.69.dmp \
test.an1.dmp test.dfp1.dmp test.dfr1.dmp test.dfr2.dmp test.dfr3.dmp \
test.gr1.dmp test.gr2.dmp test.gr3.dmp test.gr4.dmp test.gr5.dmp \
test.PointFile.dmp \
test.sds1.dmp test.sds2.dmp test.sds3.dmp test.sds4.dmp \
test.sds5.dmp test.sds6.dmp test.sds7.dmp \
test.SwathFile.dmp \
test.vs1.dmp test.vs2.dmp test.vs3.dmp test.vs4.dmp test.vs5.dmp \
whoi.dmp
